# GUPO

./: .env  .gitignore  ambiguity_analysis.py  evaluate.py  generate.py  preference_datasets.py  pyproject.toml  run_eval_mlp.sh  train.py  trainers.py  utils.py
config/: config.yaml
config/loss/: dpo.yaml  gupo.yaml
config/model/: llama3b.yaml  qwen2.5_1.5b.yaml
evaluator/: alpacaeval2_generate.py  armorm_eval.py  gpt_eval_response_score.py  gpt_eval_win_rate.py  gpt_eval_win_rate_batched.py  gpteval.py
evaluator/alpacaeval2/: alpha_dpo.json  alpha_dpo_formatted.json  gupo_alter_rho0.9.json  gupo_alter_rho0.9_formatted.json  gupo_joint_formatted.json
evaluator/alpacaeval2/alpaca_eval_gpt4_turbo_fn/: annotations.json  leaderboard.csv
trainers/: dpo_trainers.py  gupo_trainers.py  simpo_trainers.py
utils/: preference_datasets.py
